--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://miraclecodes:Wilburlovessam24@cluster0.tobot.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://alexdemisse2025:Naolmyson@cluster0.7lt2a.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
