--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://Admin:Password123@cluster0.8gafitu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://miraclecodes:Wilburlovessam24@cluster0.tobot.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
