--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://alexdemisse2025:Naolmyson@cluster0.7lt2a.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://absara2025:Meresaie*2025@absara2025.plphg.mongodb.net/?retryWrites=true&w=majority&appName=absara2025
