--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://filmon:abraha@catcluster.twra24t.mongodb.net/?retryWrites=true&w=majority&appName=CatCluster
+MONGO_URI=mongodb+srv://miraclecodes:Wilburlovessam24@cluster0.tobot.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
